cloud/k3s/backend/wordpress/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 4
        fsGroup: 33
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      containers:
      - name: wordpress
        image: wordpress:6
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    name: wordpress
spec:
  ingressClassName: nginx
  tls:
  - secretName: jsxjp-tls
    hosts: ["blog.jsx.jp"]
  rules:
  - host: blog.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress
            port:
              number: 80
